syntax="proto3";
option go_package="github.com/kiran-blockchain/nextxd-go-advanced/grpc-mongo";

package Netxd_Dal;

service Netxd_DalService{
    rpc CreateCustomer(CustomerProfile)returns(CustomerResponse);
}

message CustomerProfile {
    int32 CustomerId=1;
    string FirstName=2;
    string LastNamae=3;
    int32 BankId=4;
    float Balance=5;
    string CreatedAt=6;
    string UpadatedAt=7;
    bool IsActive=8;
}

message CustomerResponse {
    int32 CustomerId=1;
    string FirstName=2;
    string UpdatedAt=3;
}